# face-detection-yunet

./: Dockerfile  MAKE87.yml  README.md  pyproject.toml
app/: main.py
